fix: gap styles

--- a/src/components/welcome/welcome-block/welcome-block.module.scss
+++ b/src/components/welcome/welcome-block/welcome-block.module.scss
@@ -38,6 +38,13 @@
     .header {
       margin-bottom: 20px;
     }
+    .nav {
+      display: flex;
+      gap: 20px;
+      a {
+        width: 100px;
+      }
+    }
   }
 }
 
